[package]
name = "nonparallel-async"
version = "0.1.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>", "MOZGIII <mike-n@narod.ru>"]
documentation = "https://docs.rs/nonparallel-async/"
repository = "https://github.com/MOZGIII/nonparallel-async/"
license = "MIT OR Apache-2.0"
description = "Rust macro for ensuring non-parallel execution of async functions."
readme = "README.md"
keywords = ["parallel", "concurrent", "lock", "macro", "testing"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "sync", "parking_lot", "rt-multi-thread"] }